--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.11",
     "lodash.keyby": "^4.6.0",
     "qs": "^6.5.2",
+    "ssri": "^8.0.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
